fixed scrollbar

--- a/assets/styles/2FA.css
+++ b/assets/styles/2FA.css
@@ -1,7 +1,14 @@
-div {
-  width: 600px;
 
-  margin: 100px auto;
+/* bb  */
+body {
+  display: flex;
+  justify-content: center; /* Center content horizontally */
+  align-items: center; /* Center content vertically */
+  height: 100vh; /* Ensure the body fills the viewport height */
+}
+
+.main {
+  width: 600px;
   border-radius: 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 100px;
@@ -10,18 +17,17 @@ div {
 
 form {
   display: flex;
+  flex-direction: column;
   gap: 10px;
-  justify-content: center;
   align-items: center;
 }
 
 img {
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto; /* Center image horizontally */
 }
 
 body {
-  font-family: arial;
+  font-family: Arial, sans-serif;
 }
 
 p {
